# bootloader

./: .gitignore  Cargo.toml  Makefile  README.md  efi.sh  rust-toolchain.toml
documentation/: general_boot_process.md
myboot/: Cargo.toml  Makefile
myboot/qemu/aarch64/esp/efi/boot/: bootaa64.efi
myboot/qemu/arm/: run.sh
myboot/qemu/virt_test_drive/: hello_world.txt
myboot/qemu/x86/: run.sh
myboot/qemu/x86/esp/: NvVars
myboot/qemu/x86/esp/efi/boot/: bootx64.efi
myboot/src/: disk_helpers.rs  handle_helpers.rs  kernel_loading.rs  kernel_params.rs  main.rs  memory.rs  my_list_logic.rs  myinput.rs  paging.rs
myboot/src/shell/: commands.rs  mod.rs
src/: disk_helpers.rs  gdt.rs  handle_helpers.rs  kernel_loading.rs  kernel_params.rs  main.rs  memory.rs  my_list_logic.rs  paging.rs  shell.rs  simple_error.rs
src/disk/: fs.rs  mod.rs
src/kernel/: mod.rs  params.rs
src/mem/: gdt.rs  mod.rs  paging.rs
src/shell/: commands.rs  mod.rs
