[package]
name = "myboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.33.0", features = ["alloc", "global_allocator"]}
uefi-raw = "0.9.0"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
debug = true
