[package]
name = "bs2boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.33.0", features = ["alloc", "global_allocator"]}
uefi-raw = "0.9.0"
ext4-view = "0.9.0"
anyhow = { version = "1.0.93", default-features = false }
regex = { version = "1.11.1", default-features = false }

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
debug = true
